Fix icon alignment

--- a/client/a8c-for-agencies/sections/sites/features/a4a/site-error-preview/style.scss
+++ b/client/a8c-for-agencies/sections/sites/features/a4a/site-error-preview/style.scss
@@ -73,7 +73,7 @@
 	}
 
 	.button .gridicon {
-		inset-block-start: 6px;
-		inset-inline-start: 1px;
+		inset-block-start: 1px;
+		inset-inline-start: 6px;
 	}
 }
